# email-agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.azure-pipelines/: agent-ui.build.yaml  agent-ui.linter.yaml  agent-ui.tag.yaml  cerm-mcp.build.yaml  cerm-mcp.linter.yaml  cerm-mcp.tag.yaml  m365-mcp.build.yaml  m365-mcp.linter.yaml  mcp.linter.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  client.build.yaml  mcp.build.yaml
config/agent/: system_prompt.md
config/classification/: classification.json
gradio-app/: Dockerfile  pyproject.toml
gradio-app/src/: const.py  start_gradio.py
gradio-app/src/agent/: __init__.py  agent.py  mcp_client.py
gradio-app/src/config/: config.py
m365-mcp/: Dockerfile  example_mcp.json
m365-mcp/logs/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_163106/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_163914/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_193243/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_211920/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_212127/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251119_212159/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251122_134039/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_130854/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_131944/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_132210/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_132357/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_141046/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_141116/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_142109/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_144246/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251126_152247/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251201_083455/: mcp_server_all.jsonl
m365-mcp/logs/archives/20251206_102642/: mcp_server_all.jsonl
m365-mcp/src/m365_mcp/: auth.py  server.py
m365-mcp/src/m365_mcp/tools/: __init__.py
mcp-server/: .dockerignore  .env.template  pyproject.toml
mcp-server/config/classification/: classification.json  system_prompt.md
mcp-server/config/model/: system_prompt.md
mcp-server/config/server/: claude_desktop_config.json
mcp-server/src/: mcp_server.py  start_mcp.py
mcp-server/src/model/: __init__.py  model.py
mcp-server/src/tools/: __init__.py  classify_message.py  save_order.py
mcp-server/src/utils/: __init__.py
src/: agent.py  const.py  gradio_app.py  main.py  mcp_server.py  run_mcp.py  start_gradio.py
src/agent/: __init__.py  agent.py  mcp_client.py
src/config/: __init__.py
src/tools/: __init__.py  classify_message.py  save_order.py
